# DRF_home_project

./: .env.sample  README.md  data.json  docker-compose.yaml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
lms/: apps.py  models.py  paginations.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_alter_lesson_will.py  0003_remove_lesson_will_lesson_well.py  0004_payments.py  0005_rename_payments_subscription.py  0006_lesson_owner_well_owner.py  0007_subscription_is_active.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_user_avatar_and_more.py  0003_payments.py  0004_alter_payments_options.py  0005_delete_payments.py  0006_payment.py  0007_alter_payment_lesson_alter_payment_well.py
